refactor: add created_at field to get playlist endpoint
