# api/internal/api/openapi/gen.go
@@ -115,10 +115,11 @@ type LoginResponse struct {
 
 // Playlist defines model for Playlist.
 type Playlist struct {
-	Id     openapi_types.UUID `json:"id"`
-	Name   string             `json:"name"`
-	Tracks []PlaylistTrack    `json:"tracks"`
-	Type   string             `json:"type"`
+	CreatedAt time.Time          `json:"created_at"`
+	Id        openapi_types.UUID `json:"id"`
+	Name      string             `json:"name"`
+	Tracks    []PlaylistTrack    `json:"tracks"`
+	Type      string             `json:"type"`
 }
 
 // PlaylistTrack defines model for PlaylistTrack.
@@ -712,7 +713,6 @@ func NewPostApiAuthRefreshRequestWithBody(server string, params *PostApiAuthRefr
 	req.Header.Add("Content-Type", contentType)
 
 	if params != nil {
-
 		if params.XCSRFToken != nil {
 			var headerParam0 string
 
@@ -723,11 +723,9 @@ func NewPostApiAuthRefreshRequestWithBody(server string, params *PostApiAuthRefr
 
 			req.Header.Set("X-CSRF-Token", headerParam0)
 		}
-
 	}
 
 	if params != nil {
-
 		if params.Refresh != nil {
 			var cookieParam0 string
 
@@ -769,7 +767,6 @@ func NewGetApiAuthVerifyRequest(server string, params *GetApiAuthVerifyParams) (
 		queryValues := queryURL.Query()
 
 		if params.Role != nil {
-
 			if queryFrag, err := runtime.StyleParamWithLocation("form", true, "role", runtime.ParamLocationQuery, *params.Role); err != nil {
 				return nil, err
 			} else if parsed, err := url.ParseQuery(queryFrag); err != nil {
@@ -781,7 +778,6 @@ func NewGetApiAuthVerifyRequest(server string, params *GetApiAuthVerifyParams) (
 					}
 				}
 			}
-
 		}
 
 		queryURL.RawQuery = queryValues.Encode()
@@ -793,7 +789,6 @@ func NewGetApiAuthVerifyRequest(server string, params *GetApiAuthVerifyParams) (
 	}
 
 	if params != nil {
-
 		if params.Access != nil {
 			var cookieParam0 string
 
@@ -877,7 +872,6 @@ func NewPostApiIntegrationsSpotifyTracksSyncRequestWithBody(server string, param
 	req.Header.Add("Content-Type", contentType)
 
 	if params != nil {
-
 		if params.XCSRFToken != nil {
 			var headerParam0 string
 
@@ -888,11 +882,9 @@ func NewPostApiIntegrationsSpotifyTracksSyncRequestWithBody(server string, param
 
 			req.Header.Set("X-CSRF-Token", headerParam0)
 		}
-
 	}
 
 	if params != nil {
-
 		if params.Access != nil {
 			var cookieParam0 string
 
@@ -976,7 +968,6 @@ func NewGetApiMePlaylistsRequest(server string, params *GetApiMePlaylistsParams)
 	}
 
 	if params != nil {
-
 		if params.Access != nil {
 			var cookieParam0 string
 
@@ -1073,7 +1064,6 @@ func NewPostApiOauthSpotifyTokenRefreshRequestWithBody(server string, params *Po
 	req.Header.Add("Content-Type", contentType)
 
 	if params != nil {
-
 		if params.XCSRFToken != nil {
 			var headerParam0 string
 
@@ -1084,11 +1074,9 @@ func NewPostApiOauthSpotifyTokenRefreshRequestWithBody(server string, params *Po
 
 			req.Header.Set("X-CSRF-Token", headerParam0)
 		}
-
 	}
 
 	if params != nil {
-
 		if params.Access != nil {
 			var cookieParam0 string
 
@@ -1172,7 +1160,6 @@ func NewPostApiPlaylistsRequestWithBody(server string, params *PostApiPlaylistsP
 	req.Header.Add("Content-Type", contentType)
 
 	if params != nil {
-
 		if params.XCSRFToken != nil {
 			var headerParam0 string
 
@@ -1183,11 +1170,9 @@ func NewPostApiPlaylistsRequestWithBody(server string, params *PostApiPlaylistsP
 
 			req.Header.Set("X-CSRF-Token", headerParam0)
 		}
-
 	}
 
 	if params != nil {
-
 		if params.Access != nil {
 			var cookieParam0 string
 
@@ -1238,7 +1223,6 @@ func NewGetApiPlaylistsIdRequest(server string, id openapi_types.UUID, params *G
 	}
 
 	if params != nil {
-
 		if params.Access != nil {
 			var cookieParam0 string
 
@@ -1307,7 +1291,6 @@ func NewGetApiUsersRequest(server string, params *GetApiUsersParams) (*http.Requ
 		queryValues := queryURL.Query()
 
 		if params.Limit != nil {
-
 			if queryFrag, err := runtime.StyleParamWithLocation("form", true, "limit", runtime.ParamLocationQuery, *params.Limit); err != nil {
 				return nil, err
 			} else if parsed, err := url.ParseQuery(queryFrag); err != nil {
@@ -1319,7 +1302,6 @@ func NewGetApiUsersRequest(server string, params *GetApiUsersParams) (*http.Requ
 					}
 				}
 			}
-
 		}
 
 		queryURL.RawQuery = queryValues.Encode()
@@ -1331,7 +1313,6 @@ func NewGetApiUsersRequest(server string, params *GetApiUsersParams) (*http.Requ
 	}
 
 	if params != nil {
-
 		if params.Access != nil {
 			var cookieParam0 string
 
@@ -2028,7 +2009,6 @@ func ParseGetApiHealthResponse(rsp *http.Response) (*GetApiHealthResponse, error
 			return nil, err
 		}
 		response.JSON500 = &dest
-
 	}
 
 	return response, nil
@@ -2626,7 +2606,6 @@ type MiddlewareFunc func(http.Handler) http.Handler
 
 // PostApiAuthRefresh operation middleware
 func (siw *ServerInterfaceWrapper) PostApiAuthRefresh(w http.ResponseWriter, r *http.Request) {
-
 	var err error
 
 	// Parameter object where we will unmarshal all parameters from the context
@@ -2681,7 +2660,6 @@ func (siw *ServerInterfaceWrapper) PostApiAuthRefresh(w http.ResponseWriter, r *
 
 // GetApiAuthVerify operation middleware
 func (siw *ServerInterfaceWrapper) GetApiAuthVerify(w http.ResponseWriter, r *http.Request) {
-
 	var err error
 
 	ctx := r.Context()
@@ -2729,7 +2707,6 @@ func (siw *ServerInterfaceWrapper) GetApiAuthVerify(w http.ResponseWriter, r *ht
 
 // GetApiHealth operation middleware
 func (siw *ServerInterfaceWrapper) GetApiHealth(w http.ResponseWriter, r *http.Request) {
-
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetApiHealth(w, r)
 	}))
@@ -2743,7 +2720,6 @@ func (siw *ServerInterfaceWrapper) GetApiHealth(w http.ResponseWriter, r *http.R
 
 // PostApiIntegrationsSpotifyTracksSync operation middleware
 func (siw *ServerInterfaceWrapper) PostApiIntegrationsSpotifyTracksSync(w http.ResponseWriter, r *http.Request) {
-
 	var err error
 
 	ctx := r.Context()
@@ -2804,7 +2780,6 @@ func (siw *ServerInterfaceWrapper) PostApiIntegrationsSpotifyTracksSync(w http.R
 
 // PostApiLogin operation middleware
 func (siw *ServerInterfaceWrapper) PostApiLogin(w http.ResponseWriter, r *http.Request) {
-
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.PostApiLogin(w, r)
 	}))
@@ -2818,7 +2793,6 @@ func (siw *ServerInterfaceWrapper) PostApiLogin(w http.ResponseWriter, r *http.R
 
 // GetApiMePlaylists operation middleware
 func (siw *ServerInterfaceWrapper) GetApiMePlaylists(w http.ResponseWriter, r *http.Request) {
-
 	var err error
 
 	ctx := r.Context()
@@ -2858,7 +2832,6 @@ func (siw *ServerInterfaceWrapper) GetApiMePlaylists(w http.ResponseWriter, r *h
 
 // PostApiOauthSpotifyToken operation middleware
 func (siw *ServerInterfaceWrapper) PostApiOauthSpotifyToken(w http.ResponseWriter, r *http.Request) {
-
 	ctx := r.Context()
 
 	ctx = context.WithValue(ctx, BearerTokenAuthScopes, []string{})
@@ -2878,7 +2851,6 @@ func (siw *ServerInterfaceWrapper) PostApiOauthSpotifyToken(w http.ResponseWrite
 
 // PostApiOauthSpotifyTokenRefresh operation middleware
 func (siw *ServerInterfaceWrapper) PostApiOauthSpotifyTokenRefresh(w http.ResponseWriter, r *http.Request) {
-
 	var err error
 
 	ctx := r.Context()
@@ -2939,7 +2911,6 @@ func (siw *ServerInterfaceWrapper) PostApiOauthSpotifyTokenRefresh(w http.Respon
 
 // GetApiOpenapiYaml operation middleware
 func (siw *ServerInterfaceWrapper) GetApiOpenapiYaml(w http.ResponseWriter, r *http.Request) {
-
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetApiOpenapiYaml(w, r)
 	}))
@@ -2953,7 +2924,6 @@ func (siw *ServerInterfaceWrapper) GetApiOpenapiYaml(w http.ResponseWriter, r *h
 
 // PostApiPlaylists operation middleware
 func (siw *ServerInterfaceWrapper) PostApiPlaylists(w http.ResponseWriter, r *http.Request) {
-
 	var err error
 
 	ctx := r.Context()
@@ -3014,7 +2984,6 @@ func (siw *ServerInterfaceWrapper) PostApiPlaylists(w http.ResponseWriter, r *ht
 
 // GetApiPlaylistsId operation middleware
 func (siw *ServerInterfaceWrapper) GetApiPlaylistsId(w http.ResponseWriter, r *http.Request) {
-
 	var err error
 
 	// ------------- Path parameter "id" -------------
@@ -3063,7 +3032,6 @@ func (siw *ServerInterfaceWrapper) GetApiPlaylistsId(w http.ResponseWriter, r *h
 
 // GetApiSpotifyStatus operation middleware
 func (siw *ServerInterfaceWrapper) GetApiSpotifyStatus(w http.ResponseWriter, r *http.Request) {
-
 	ctx := r.Context()
 
 	ctx = context.WithValue(ctx, BearerTokenAuthScopes, []string{})
@@ -3083,7 +3051,6 @@ func (siw *ServerInterfaceWrapper) GetApiSpotifyStatus(w http.ResponseWriter, r 
 
 // GetApiUsers operation middleware
 func (siw *ServerInterfaceWrapper) GetApiUsers(w http.ResponseWriter, r *http.Request) {
-
 	var err error
 
 	ctx := r.Context()
@@ -3337,8 +3304,7 @@ type GetApiAuthVerifyResponseObject interface {
 	VisitGetApiAuthVerifyResponse(w http.ResponseWriter) error
 }
 
-type GetApiAuthVerify204Response struct {
-}
+type GetApiAuthVerify204Response struct{}
 
 func (response GetApiAuthVerify204Response) VisitGetApiAuthVerifyResponse(w http.ResponseWriter) error {
 	w.WriteHeader(204)
@@ -3372,15 +3338,13 @@ func (response GetApiAuthVerify500JSONResponse) VisitGetApiAuthVerifyResponse(w 
 	return json.NewEncoder(w).Encode(response)
 }
 
-type GetApiHealthRequestObject struct {
-}
+type GetApiHealthRequestObject struct{}
 
 type GetApiHealthResponseObject interface {
 	VisitGetApiHealthResponse(w http.ResponseWriter) error
 }
 
-type GetApiHealth204Response struct {
-}
+type GetApiHealth204Response struct{}
 
 func (response GetApiHealth204Response) VisitGetApiHealthResponse(w http.ResponseWriter) error {
 	w.WriteHeader(204)
@@ -3405,8 +3369,7 @@ type PostApiIntegrationsSpotifyTracksSyncResponseObject interface {
 	VisitPostApiIntegrationsSpotifyTracksSyncResponse(w http.ResponseWriter) error
 }
 
-type PostApiIntegrationsSpotifyTracksSync204Response struct {
-}
+type PostApiIntegrationsSpotifyTracksSync204Response struct{}
 
 func (response PostApiIntegrationsSpotifyTracksSync204Response) VisitPostApiIntegrationsSpotifyTracksSyncResponse(w http.ResponseWriter) error {
 	w.WriteHeader(204)
@@ -3544,8 +3507,7 @@ type PostApiOauthSpotifyTokenResponseObject interface {
 	VisitPostApiOauthSpotifyTokenResponse(w http.ResponseWriter) error
 }
 
-type PostApiOauthSpotifyToken204Response struct {
-}
+type PostApiOauthSpotifyToken204Response struct{}
 
 func (response PostApiOauthSpotifyToken204Response) VisitPostApiOauthSpotifyTokenResponse(w http.ResponseWriter) error {
 	w.WriteHeader(204)
@@ -3579,8 +3541,7 @@ type PostApiOauthSpotifyTokenRefreshResponseObject interface {
 	VisitPostApiOauthSpotifyTokenRefreshResponse(w http.ResponseWriter) error
 }
 
-type PostApiOauthSpotifyTokenRefresh204Response struct {
-}
+type PostApiOauthSpotifyTokenRefresh204Response struct{}
 
 func (response PostApiOauthSpotifyTokenRefresh204Response) VisitPostApiOauthSpotifyTokenRefreshResponse(w http.ResponseWriter) error {
 	w.WriteHeader(204)
@@ -3632,8 +3593,7 @@ func (response PostApiOauthSpotifyTokenRefresh500JSONResponse) VisitPostApiOauth
 	return json.NewEncoder(w).Encode(response)
 }
 
-type GetApiOpenapiYamlRequestObject struct {
-}
+type GetApiOpenapiYamlRequestObject struct{}
 
 type GetApiOpenapiYamlResponseObject interface {
 	VisitGetApiOpenapiYamlResponse(w http.ResponseWriter) error
@@ -3784,8 +3744,7 @@ func (response GetApiPlaylistsId500JSONResponse) VisitGetApiPlaylistsIdResponse(
 	return json.NewEncoder(w).Encode(response)
 }
 
-type GetApiSpotifyStatusRequestObject struct {
-}
+type GetApiSpotifyStatusRequestObject struct{}
 
 type GetApiSpotifyStatusResponseObject interface {
 	VisitGetApiSpotifyStatusResponse(w http.ResponseWriter) error
@@ -3905,8 +3864,10 @@ type StrictServerInterface interface {
 	GetApiUsers(ctx context.Context, request GetApiUsersRequestObject) (GetApiUsersResponseObject, error)
 }
 
-type StrictHandlerFunc = strictnethttp.StrictHTTPHandlerFunc
-type StrictMiddlewareFunc = strictnethttp.StrictHTTPMiddlewareFunc
+type (
+	StrictHandlerFunc    = strictnethttp.StrictHTTPHandlerFunc
+	StrictMiddlewareFunc = strictnethttp.StrictHTTPMiddlewareFunc
+)
 
 type StrictHTTPServerOptions struct {
 	RequestErrorHandlerFunc  func(w http.ResponseWriter, r *http.Request, err error)
